--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -15,6 +15,9 @@
   "item.tutorialmod.sapphire_leggings": "Sapphire Leggings",
   "item.tutorialmod.sapphire_boots": "Sapphire Boots",
 
+  "item.tutorialmod.bar_brawl_music_disc": "Bar Brawl Music Disc",
+  "item.tutorialmod.bar_brawl_music_disc.desc": "Bryan Tech - Bar Brawl (CC0)",
+
   "block.tutorialmod.sapphire_block": "Block of Sapphire",
   "block.tutorialmod.raw_sapphire_block": "Block of Raw Sapphire",
 
@@ -38,6 +41,8 @@
   "tooltip.tutorialmod.metal_detector.tooltip": "Finds valuables underground",
 
   "entity.minecraft.villager.tutorialmod.soundmaster": "Sound Master",
+
+  "sounds.tutorialmod.metal_detector_found_ore": "Metal Detector Jingle",
 
   "creativetab.tutorial_tab": "Sapphire Tutorial Tab"
 }
