--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -38,6 +38,13 @@
   "block.tutorialmod.sapphire_door": "Sapphire Door",
   "block.tutorialmod.sapphire_trapdoor": "Sapphire Trapdoor",
 
+  "block.tutorialmod.pine_log": "Pine Log",
+  "block.tutorialmod.pine_planks": "Pine Planks",
+  "block.tutorialmod.pine_wood": "Pine Wood",
+  "block.tutorialmod.pine_leaves": "Pine Leaves",
+  "block.tutorialmod.stripped_pine_log": "Stripped Pine Log",
+  "block.tutorialmod.stripped_pine_wood": "Stripped Pine Wood",
+
   "tooltip.tutorialmod.metal_detector.tooltip": "Finds valuables underground",
 
   "entity.minecraft.villager.tutorialmod.soundmaster": "Sound Master",
