Tutorial video nummer 39 af. custom hout kan groeien
https://www.youtube.com/watch?v=AFS5mM2PJ6w&list=PLKGarocXCE1H9Y21-pxjt5Pt8bW14twa-&index=39

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -28,6 +28,8 @@
 
   "block.tutorialmod.sound_block": "Sound Block",
 
+  "block.tutorialmod.pine_sapling": "Pine Sapling",
+
   "block.tutorialmod.sapphire_stairs": "Sapphire Stairs",
   "block.tutorialmod.sapphire_slab": "Sapphire Slab",
   "block.tutorialmod.sapphire_button": "Sapphire Button",
