Tutorial video nummer 44 af. custom dimensions kunnen gemaakt worden
https://www.youtube.com/watch?v=AFS5mM2PJ6w&list=PLKGarocXCE1H9Y21-pxjt5Pt8bW14twa-&index=44

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -26,6 +26,8 @@
   "block.tutorialmod.nether_sapphire_ore": "Nether Sapphire Ore",
   "block.tutorialmod.end_stone_sapphire_ore": "Endstone Sapphire Ore",
 
+  "block.tutorialmod.mod_portal": "Portal Block",
+
   "block.tutorialmod.sound_block": "Sound Block",
 
   "block.tutorialmod.pine_sapling": "Pine Sapling",
